# alertmanager-report-manager

./: .dockerignore  Agent.md  Dockerfile  README.md  pyproject.toml
docs/: alertmanager-webhook-payloads.md  architecture.md  database.md  index.md  ingestion.md  web-framework.md
src/alertmanager_report_manager/: __init__.py  cli.py
src/alertmanager_report_manager/ingestion/: __init__.py  alertmanager.py
src/alertmanager_report_manager/storage/: __init__.py  schema.sql  sqlite.py
src/alertmanager_report_manager/web/: __init__.py  app.py  config.py  routes.py
tests/: test_alertmanager_fixtures.py  test_cli.py  test_ingestion_alertmanager.py  test_package.py  test_storage_sqlite.py  test_web_app.py
tests/fixtures/alertmanager/: webhook_firing_group.json  webhook_resolved_group.json
tests/fixtures/alertmanager/scenarios/duplicate_delivery/: first_call.json  second_call.json
