[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "alertmanager-report-manager"
version = "0.1.0"
description = "Reporting and analytics platform for Prometheus Alertmanager."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Filippo Ferrazini" },
]
keywords = [
  "alertmanager",
  "alerts",
  "prometheus",
  "reporting",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.136,<0.137",
]

[project.scripts]
alertmanager-report-manager = "alertmanager_report_manager.cli:main"

[project.optional-dependencies]
dev = [
  "httpx2>=2.0,<3",
  "pytest>=8",
  "ruff>=0.5",
]
web = [
  "uvicorn[standard]>=0.47,<0.48",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alertmanager_report_manager = ["storage/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
]
